//
// Copyright (C) 2019 kpango (Yusuke Kato)
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package backup_manager;

option go_package = "github.com/vdaas/vald/apis/grpc/manager/backup";
option java_multiple_files = true;
option java_package = "org.vdaas.vald.manager.backup";
option java_outer_classname = "ValdBackupManager";

import "payload.proto";
import "google/api/annotations.proto";
import "pb/gql.proto";

service Backup {
  option (gql.svc_type) = QUERY;

  rpc GetVector(payload.Object.ID) returns (payload.Object.MetaVector) {}

  rpc Locations(payload.Object.ID) returns (payload.Info.IPs) {}

  rpc Register(payload.Object.MetaVector) returns (payload.Empty) {
    option (google.api.http) = {
      post : "/register"
      body : "*"
    };
    option (gql.rpc_type) = MUTATION;
  }
  rpc RegisterMulti(payload.Object.MetaVectors) returns (payload.Empty) {}

  rpc Remove(payload.Object.ID) returns (payload.Empty) {
    option (google.api.http).delete = "/remove/{id}";
    option (gql.rpc_type) = MUTATION;
  }
  rpc RemoveMulti(payload.Object.IDs) returns (payload.Empty) {}
}
